SPY: fix carousel spacing

--- a/app/(site)/component/carousel/carousel.scss
+++ b/app/(site)/component/carousel/carousel.scss
@@ -8,7 +8,7 @@
   padding: utils.bu(10) 0;
 
   @include mixins.breakpoint(lg) {
-    padding: utils.bu(15) 0;
+    padding: utils.bu(13) 0;
   }
 
   .ticker {
